--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Root storage directory for user data
-DATA_DIR=/data/suno
+# Use ./data for local development, or /data/suno for production
+DATA_DIR=./data
 PORT=8080
