--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .env
 .env.*
 !.env.example
+
+node_modules
+.DS_Store
+data
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.vscode
