--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dev": "NODE_ENV=development nodemon server.js"
   },
   "dependencies": {
+    "@fastify/static": "^8.0.2",
+    "archiver": "^7.0.1",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
-    "fastify-static": "^6.12.0",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
