--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,21 @@
 # Use ./data for local development, or /data/suno for production
 DATA_DIR=./data
 PORT=8080
+
+# Rate limit (in milliseconds) between downloads to avoid hitting API limits
+# Default: 2000 (2 seconds). Increase if you get 429 errors.
+RATE_LIMIT_MS=2000
+
+# Number of concurrent downloads
+# Default: 3. Lower this (1-2) if you have slow connection or hit rate limits.
+# Increase (4-6) if you have fast connection and want faster downloads.
+CONCURRENCY=3
+
+# Maximum number of retry attempts for failed requests
+# Default: 3. Increase if you have an unstable connection.
+MAX_RETRIES=3
+
+# Default audio format when not specified in request
+# Options: mp3, wav, both
+# Default: mp3
+DEFAULT_FORMAT=mp3
